data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1269.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\a3\80\80\80\00\02\00\0d\69\6d\70\6f\72"
    "\74\65\64\46\75\6e\63\31\00\00\00\0d\69\6d\70\6f"
    "\72\74\65\64\46\75\6e\63\32\00\00\03\82\80\80\80"
    "\00\01\00\0a\a5\80\80\80\00\01\9f\80\80\80\00\00"
    "\02\40\02\40\02\40\0c\02\10\00\02\40\0c\02\10\01"
    "\02\40\0c\01\10\01\0c\03\0b\0b\0b\0b\0b\0b"
  )
""
)